# yt-history

./: .gitignore  Makefile  README.md  pyproject.toml  youtube_history_pipeline.py
docs/: build-brief.md
tests/: test_pipeline.py
tests/fixtures/: watch-history.html
